--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,10 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  font-family: "Helvetica New", Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  margin: 0 auto;
 }
 .header {
   min-height: 720px;
@@ -19,7 +20,7 @@
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 
   /* Add flex properties here */
@@ -28,15 +29,13 @@
 .logo {
   height: 60px;
   width: 196px;
-  position: absolute;
-  left: 20px;
-  top: 135 px;
 }
 
 .nav__links {
   list-style: none;
   padding-left: 0;
   margin-top: 8px;
+  margin-bottom: 0px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -74,8 +73,8 @@
   z-index: 1;
   max-width: 636px;
   position: absolute;
-  right: 0;
-  bottom: 100px;
+  top: 135px;
+  right: 20px;
 }
 
 .header__footer {
@@ -135,6 +134,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 40px;
+  padding-left: 0px;
 }
 .card {
   background-color: #fff;
@@ -246,7 +246,7 @@
   color: #2f80ed;
   text-decoration: none;
 }
-.events_more:hover {
+.events__more:hover {
   color: #1f69c9;
 }
 /* Add the hover state styles for .events__more here */
@@ -350,7 +350,6 @@
   display: flex;
   justify-content: center;
   gap: 40px;
-  align-items: center;
   /* Add styles */
 }
 
@@ -427,37 +426,24 @@
 
 .footer {
   box-sizing: border-box;
-  min-height: 224px;
-  padding: 60px 80px 102px 80px;
   background-color: #1f1f1f;
   color: #fff;
-  overflow: hidden;
-  position: relative;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  padding: 60px 102px 60px 80x;
 }
 .footer__columns {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  position: relative;
 }
 
-.footer__column_content_hours {
+.footer__column_hours {
+  margin-left: auto;
 }
 
-.footer__column_content_social {
+.footer__column_social {
   margin-left: 100px;
 }
 
 .footer__logo {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 116px;
-  width: 21px;
+  width: 153px;
 }
 
 .footer__list {
@@ -468,27 +454,33 @@
 }
 
 .footer__list-item {
-  margin-top: 16px;
+  margin-bottom: 16px;
 }
-
+.footer_list-item:last-of-type {
+  margin-bottom: 0px;
+}
 .footer__column-heading {
-  margin-bottom: 20px;
+  margin: 0px 0px 20px;
 }
 
 .footer__column-link {
+  display: flex;
+  align-items: center;
   color: white;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
 }
+.footer__column-link:hover {
+  color: #c1c1c1;
+}
 
 .footer__social-icon {
   height: 16px;
   width: 16px;
+  margin-right: 10px;
 }
 
-.footer__copyright {
-  position: absolute;
-  bottom: 60px;
-  left: 80px;
+.footer__column-copyrights {
+  margin: 108px 0px 0px;
 }
