--- a/styles/style.css
+++ b/styles/style.css
@@ -443,7 +443,8 @@
 }
 
 .footer__logo {
-  width: 153px;
+  width: 116px;
+  height: 21px;
 }
 
 .footer__list {
@@ -459,14 +460,18 @@
 .footer_list-item:last-of-type {
   margin-bottom: 0px;
 }
-.footer__column-heading {
+.footer__heading {
   margin: 0px 0px 20px;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__column-link {
   display: flex;
   align-items: center;
   color: white;
+  font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
